/*
 * $Id: ChangeLog,v 1.2668 2004/03/28 15:11:37 likewolf Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-03-28 20:12 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * source/rtl/errorsys.prg
  * source/rtl/win32ole.prg
    ! Changed Windows header file names to lowercase to allow
      cross-compiling from Unix via MinGW.

2004-03-28 19:30 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * tests/macro.prg
    + Added some tests for Clipper compatibility of &() and Type().

2004-03-28 19:20 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * source/compiler/harbour.slx
    ! Fixed a warning and a possible bug in hb_compCheckIllegalChar().
  * source/compiler/hbgenerr.c
  * source/rtl/direct.c
    * Fixed some warnings.
  * source/vm/arrayshb.c
    ! Fixed a bug (missing parentheses) in HB_ATOKENS().
  * source/odbc/odbc.c
    ! Removed non-standard and unneeded #include <malloc.h>

2004-03-28 16:00 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * makefile.vc
  * makefile.nt
    ! add "p" (improve floating point) flag to compiler switch to reduce
      hbtest.exe errors to 11 from previously 15 (Thanks to Przemek!)

  * contrib/rdd_ads/adsfunc.c
    ! add missing type casts

  * contrib/libct/token2.c
    ! bug fix by "Pavel Tsarenko" <tpe2@mail.ru>

2004-03-27 23:44 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/rtl/tget.prg
    ! Fixed ommision for ::IsEditable() characters in ::WordLeft(),
      ::WordRight(), ::DelWordLeft(), ::DelWordRight().

2004-03-27 12:01 UTC-0600 Vicente Guerra <vicente@guerra.com.mx>
  * source/rtl/tget.prg
    ! Fixed movement in ::WordLeft(), ::WordRight().

2004-03-26 14:04 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * contrib/rdd_ads/adsfunc.c
    + added #define ADS_REQUIRE_VERSION 6
  * contrib/rdd_ads/rddads.h