@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.2668 2004/03/28 15:11:37 likewolf Exp $
+ * $Id: ChangeLog,v 1.2670 2004/03/28 16:02:30 likewolf Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-03-29 10:35 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
+  * source/rtl/accept.c
+    - respect K_ALT_C and only accept Keyboard entry
 
 2004-03-28 20:12 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
   * source/rtl/errorsys.prg
